Install prettier, lint-staged, husky

--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,1 +1,8 @@
-<h1>SEARCH PAGE</h1>
+
+<form class="bg-light p-4 m-4">
+    <div class="form-group">
+        <label for="yourname">Email address</label>
+        <input type="text" class="form-control" id="yourname" placeholder="Nhập họ tên" name="name">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
