--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -13,7 +13,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="../news">News</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="../search">Search</a>
             </li>
         </ul>
