--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,18 @@
-<h1>HOME PAGE</h1>
+<div class="container">
+    <div class="mt-4">
+        <div class="row">
+            {{#each Course}}
+            <div class="col-sm-6 col-lg-4" style="margin-bottom: 22px;">
+                <div class="card ">
+                    <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.name}}</h5>
+                        <p class="card-text">{{this.description}}</p>
+                        <a href="#" class="btn btn-primary">Ghé thăm</a>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
