--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,13 +1,15 @@
 <form class='bg-light p-4 m-4'>
     <div class='form-group'>
-        <label for='yourname'>Email address</label>
-        <input
-            type='text'
-            class='form-control'
-            id='yourname'
-            placeholder='Nhập họ tên'
-            name='name'
-        />
+        <label >Họ và tên:</label>
+        <input type='text' class='form-control' placeholder='Nhập họ tên' name='name' />
+        <input type="text" class="form-control mt-4" id="demo">
     </div>
-    <button type='submit' class='btn btn-primary'>Submit</button>
+    <button type='submit' class='btn btn-primary' onclick="myFunction()">Submit</button>
+
 </form>
+
+<script>
+    function myFunction() {
+        document.getElementById("demo").innerHTML  = "Paragraph changed.";
+    }
+</script>
