--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -1,8 +1,19 @@
 <body>
     <p id="demo"></p>
 
+    <button onclick="myFun()">Click to here</button>
+    <script>
+        function myFun() {
+            var result = confirm("Do you really want to leave this page ?")
 
-    <script src="../../myScript.js">
-        document.getElementById("demo").innerHTML = 5 + 6;
+            if (result == true) {
+                alert("Thanks for visiting");
+            }
+            else {
+                alert("Thanks for staying with us");
+            }
+        }
     </script>
+
+    <script src="../../myindex.js"></script>
 </body>
