--- a/src/resources/views/news.hbs
+++ b/src/resources/views/news.hbs
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <script>
-        function myFunction() {
-            document.getElementById("demo").innerHTML = "Paragraph changed.";
-        }
-    </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-    <h2>Demo JavaScript in Head</h2>
 
-    <p id="demo">A Paragraph</p>
-    <button type="button" onclick="myFunction()">Try it</button>
-
-    <script>
-        function myFunction() {
-            document.getElementById("demo").innerHTML = "Paragraph changed.";
-        }
-    </script>
+    <h1>pahe new</h1>
+    <script src="../../myScript.js"></script>
 </body>
 
 </html>
