--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,31 +1,24 @@
-<nav class='navbar navbar-expand-lg navbar-light bg-light'>
-    <a class='navbar-brand' href='/'>Navbar</a>
-    <button
-        class='navbar-toggler'
-        type='button'
-        data-toggle='collapse'
-        data-target='#navbarSupportedContent'
-        aria-controls='navbarSupportedContent'
-        aria-expanded='false'
-        aria-label='Toggle navigation'
-    >
-        <span class='navbar-toggler-icon'></span>
-    </button>
 
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class='navbar-brand' href='/' style="font-weight:bold;">NodeJS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
         <ul class='navbar-nav mr-auto'>
-            <li class='nav-item active'>
+            <li class='nav-item active mr-5'>
                 <a class='nav-link' href='/'>Home
                     <span class='sr-only'>(current)</span></a>
             </li>
-            <li class='nav-item'>
-                <a class='nav-link' href='../news'>News</a>
+            <li class='nav-item active'>
+                <a class='nav-link mr-5' href='../courses/create'>News</a>
             </li>
-            <li class='nav-item'>
-                <a class='nav-link' href='../search'>Search</a>
+            <li class='nav-item active'>
+                <a class='nav-link mr-5' href='../search'>Search</a>
             </li>
-            <li class='nav-item'>
-                <a class='nav-link' href='../about'>About</a>
+            <li class='nav-item active'>
+                <a class='nav-link mr-5' href='../about'>About</a>
             </li>
         </ul>
     </div>
