--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,22 +1,20 @@
-<div class="container">
-    <div class="mt-4">
-        <div class="row">
-            {{#each Course}}
-            <div class="col-sm-6 col-lg-4" style="margin-bottom: 22px;">
-                <div class="card ">
+<div class="m-4">
+    <div class="row">
+        {{#each courses}}
+        <div class="col-sm-6 col-lg-4" >
+            <div class="card mt-4" >
+                <a href="/courses/{{this.slug}}">
+                    <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+                </a>
+                <div class="card-body">
                     <a href="/courses/{{this.slug}}">
-                        <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+                        <h6 class="card-title">{{this.name}}<h6>
                     </a>
-                    <div class="card-body">
-                        <a href="/courses/{{this.slug}}">
-                            <h5 class="card-title">{{this.name}}</h5>
-                        </a>
-                        <p class="card-text">{{this.description}}</p>
-                        <a href="#" class="btn btn-primary">Ghé thăm</a>
-                    </div>
+                    {{!-- <p class="card-text">{{this.description}}</p> --}}
+                    <a href="#" class="btn btn-primary">Ghé thăm</a>
                 </div>
             </div>
-            {{/each}}
         </div>
+        {{/each}}
     </div>
 </div>
