--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,25 +1,35 @@
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light  bg-light">
+        <a class="navbar-brand" href="/" style="font-weight:bold;">NodeJS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/search">Search</a>
+                </li>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class='navbar-brand' href='/' style="font-weight:bold;">NodeJS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class='navbar-nav mr-auto'>
-            <li class='nav-item active mr-5'>
-                <a class='nav-link' href='/'>Home
-                    <span class='sr-only'>(current)</span></a>
-            </li>
-            <li class='nav-item active'>
-                <a class='nav-link mr-5' href='../courses/create'>News</a>
-            </li>
-            <li class='nav-item active'>
-                <a class='nav-link mr-5' href='../search'>Search</a>
-            </li>
-            <li class='nav-item active'>
-                <a class='nav-link mr-5' href='../about'>About</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img class="user-avatar"
+                            src="https://files.fullstack.edu.vn/f8-prod/user_photos/213962/62aed4d842e3e.jpg" alt="">
+                        Admin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
+                        <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Đăng xuất</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
