--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2,3 +2,9 @@ h1 {
   padding-top: 10%;
   text-align: center;
   color: blue; }
+
+.user-avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-right: 4px; }
