--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,3 +3,9 @@ h1 {
     text-align: center;
     color: blue;
 }
+.user-avatar{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
