--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,4 +1,4 @@
-<form class='bg-light p-4 m-4'>
+<form class='bg-light mx-4'>
     <div class='form-group'>
         <label >Họ và tên:</label>
         <input type='text' class='form-control' placeholder='Nhập họ tên' name='name' />
