--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -8,3 +8,9 @@ h1 {
   height: 28px;
   border-radius: 50%;
   margin-right: 4px; }
+
+a:visited {
+  color: green; }
+
+a:hover {
+  color: hotpink; }
