--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,8 +1,8 @@
 <div class="m-4">
     <div class="row">
         {{#each courses}}
-        <div class="col-sm-6 col-lg-4" >
-            <div class="card mt-4" >
+        <div class="col-sm-6 col-lg-4">
+            <div class="card mt-4">
                 <a href="/courses/{{this.slug}}">
                     <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
                 </a>
@@ -15,6 +15,9 @@
                 </div>
             </div>
         </div>
+        {{else}}
+        <h4 class="text-center"> Bạn  đăng khóa học nào. <a href="/courses/create"> Đăng khóa học ngay</a>
+        </h4>
         {{/each}}
     </div>
 </div>
